--- a/index.html
+++ b/index.html
@@ -5,25 +5,16 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>HTML Email Template</title>
-<style type="text/css">
-	body {
-		margin: 0;
-		background-color: #cccccc;
-	}
-	table {
-		border-spacing: 0;
-	}
-	td {
-		padding: 0;
-	}
-	img {
-		border: 0;
-	}
-
-</style>
+<link rel="stylesheet" href="/style.css" />
 </head>
 <body>
-
+<center class="wrapper">
+	<table class="main" width="100%">
+	
+	
+	
+	</table>
+</center>
 
 
 <!-- TOP BORDER -->
