--- a/index.html
+++ b/index.html
@@ -10,18 +10,45 @@
 <body>
 <center class="wrapper">
 	<table class="main" width="100%">
-	
-	
-	
-	</table>
-</center>
+
 
 
 <!-- TOP BORDER -->
+	<tr>
+		<td height="8px" style=" background-color: #171a1b;"></td>
+	</tr>
 
+<!-- HEADER/LOGO SECTION -->
+	<tr>
+		<td style="padding: 14px 0 4px;">
+			<table width="100%">
+				<tr>
+					<td class="two-columns">
+						<table class="column">
+							<tr>
+								<td style="padding: 0 62px 10px;">
+									<a href="#"><img src="img/modern.jpg" alt="Modern Logo" widht="160" title="Modern Logo"></a>
+								</td>
+							</tr>
+						</table> <!-- End of Logo Section -->
 
-<!-- LOGO SECTION -->
+						<table class="column">
+							<tr>
+								<td style="padding: 10px 72px">
+									<a href="#"><img src="img/black-facebook.png" alt="Facebook Logo" width="30px"></a>
+									<a href="#"><img src="img/black-instagram.png" alt="Instagram Logo" width="30px"></a>
+									<a href="#"><img src="img/black-linkedin.png" alt="Linkedin Logo" width="30px"></a>
+									<a href="#"><img src="img/black-twitter.png" alt="Twitter Logo" width="30px"></a>
+									<a href="#"><img src="img/black-youtube.png" alt="YouTube Logo" width="30px"></a>
+								</td>
+							</tr>
+						</table> <!-- End of Social Icons Section-->
+					</td>
+				</tr>
 
+			</table>
+		</td>
+	</tr>
 
 <!-- BANNER IMAGE -->
 
@@ -37,7 +64,8 @@
 
 <!-- FOOTER SECTION -->
 
-
+	</table>
+</center>
 
 </body>
 </html>
