Banner Section HTML/CSS
Added banner section

--- a/index.html
+++ b/index.html
@@ -52,7 +52,11 @@
 
 <!-- BANNER IMAGE -->
 
-
+<tr>
+	<td>
+		<a href="#"><img src="img/banner.jpg" alt="Main Banner" width="600px" style="max-width:100%;"></a>
+	</td>
+</tr>
 <!-- THREE COLUMN SECTION -->
 
 
