Three Column Section
Complete layout for three column section.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,73 @@
 	</td>
 </tr>
 <!-- THREE COLUMN SECTION -->
-
+	<tr>
+		<td>
+			<table width="100%">
+				<tr>
+					<td class="three-columns">
+						<table class="column">
+							<tr>
+								<td class="padding">
+									<table class="content">
+										<tr>
+											<td>
+												<a href="#"><img src="img/email.png" alt="Email Icon" width="130" style="max-width:130px"></a>
+											</td>
+										</tr>
+										<tr>
+											<td>
+												<p style="font-weight: bold; font-size: 17px;">Ecommerce</p>
+												<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+											</td>
+										</tr>
+									</table>
+								</td>
+							</tr>
+						</table> <!-- End of column-->
+						<table class="column">
+							<tr>
+								<td class="padding">
+									<table class="content">
+										<tr>
+											<td>
+												<a href="#"><img src="img/settings.png" alt="Email Icon" width="130" style="max-width:130px"></a>
+											</td>
+										</tr>
+										<tr>
+											<td>
+												<p style="font-weight: bold; font-size: 17px;">Web Design</p>
+												<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+											</td>
+										</tr>
+									</table>
+								</td>
+							</tr>
+						</table> <!-- End of second column-->
+						<table class="column">
+							<tr>
+								<td class="padding">
+									<table class="content">
+										<tr>
+											<td>
+												<a href="#"><img src="img/home.png" alt="Email Icon" width="130" style="max-width:130px"></a>
+											</td>
+										</tr>
+										<tr>
+											<td>
+												<p style="font-weight: bold; font-size: 17px;">HTML Email</p>
+												<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+											</td>
+										</tr>
+									</table>
+								</td>
+							</tr>
+						</table> <!-- End of third column-->
+					</td>
+				</tr>
+			</table>
+		</td>
+	</tr>
 
 <!-- TWO COLUMN SECTION -->
 
