--- a/index.html
+++ b/index.html
@@ -127,7 +127,48 @@
 	</tr>
 
 <!-- TWO COLUMN SECTION -->
+<tr>
+	<td style="background-color:#26292b; color: #fff;">
+		<table width="100%">
+			<tr>
+				<td class="two-columns last">
 
+					<table class="column">
+						<tr>
+							<td class="padding">
+								<table class="content">
+									<tr>
+										<td>
+											<a href="#"><img src="img/keyboard.jpg" alt="Keyboard" width="260" style="max-width:260px;"></a>
+										</td>
+									</tr>
+								</table>
+							</td>
+						</tr>
+					</table> <!-- End Column-->
+
+					<table class="column">
+						<tr>
+							<td class="padding">
+								<table class="content">
+									<tr>
+										<td>
+											<p style="font-weight: bold; font-size:18px;">
+													Create Custom Designs
+											</p>
+											<p style="padding-bottom:16px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, nostrum velit!</p>
+											<a href="#" class="button">Read More</a>
+										</td>
+									</tr>
+								</table>
+							</td>
+						</tr>
+					</table> <!-- End Column-->
+				</td>
+			</tr>
+		</table>
+	</td>
+</tr>
 
 <!-- TITLE, TEXT & BUTTON -->
 
