Sub Footer Section Added
Sub footer section added

--- a/index.html
+++ b/index.html
@@ -171,7 +171,19 @@
 </tr>
 
 <!-- TITLE, TEXT & BUTTON -->
-
+<tr>
+	<td style="padding: 15px 0 50px;">
+		<table width="100%">
+			<tr>
+				<td style="text-align:center;padding: 15px;">
+					<p style="font-size: 20px; font-weight: bold;">Add Your Custom Header Here</p>
+					<p style="font-size: 15px; padding-top:5px 0 15px; line-height: 23px;;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga vero voluptates, hic veniam dolore eligendi nesciunt ex eos sint reiciendis nisi qui ad laboriosam consequatur id doloribus atque minus adipisci.</p>
+					<a href="#" class="button-dark">Read More</a>
+				</td>
+			</tr>
+		</table>
+	</td>
+</tr>
 
 <!-- FOOTER SECTION -->
 
