--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 						<table class="column">
 							<tr>
 								<td style="padding: 0 62px 10px;">
-									<a href="#"><img src="img/modern.jpg" alt="Modern Logo" widht="160" title="Modern Logo"></a>
+									<a href="#"><img class="responsive" src="img/modern.jpg" alt="Modern Logo" widht="160" title="Modern Logo"></a>
 								</td>
 							</tr>
 						</table> <!-- End of Logo Section -->
@@ -186,33 +186,35 @@
 </tr>
 
 <!-- FOOTER SECTION -->
-
+		<tr>
+			<td style="background-color: #26292b;">
+				<table width="100%;">
+						<tr>
+							<td style="text-align: center; padding: 45px 20px; color: #fff;">
+								<a href="#"><img class="responsive" src="img/modern-white.png" alt="Footer Logo" width="180"></a>
+								<p style="padding: 10px;">Modern HTML Email</p>
+								<p style="padding: 10px;">111 HTML CSS Lane, City, State, 11111</p>
+								<a href="#"><img src="img/white-facebook.png" alt="Facebook Logo" width="30px"></a>
+									<a href="#"><img src="img/white-instagram.png" alt="Instagram Logo" width="30px"></a>
+									<a href="#"><img src="img/white-linkedin.png" alt="Linkedin Logo" width="30px"></a>
+									<a href="#"><img src="img/white-twitter.png" alt="Twitter Logo" width="30px"></a>
+									<a href="#"><img src="img/white-youtube.png" alt="YouTube Logo" width="30px"></a>
+									<!-- Button trigger modal -->
+									 <p><button type="button" class="btn btn-sm btn-danger" style="margin:20px; transition: transform .3s ease;" data-toggle="modal" data-target="#socialModal">
+										Subscribe!
+									  </button></p>
+									
+							</td>
+						</tr>
+				</table>
+			</td>
+		</tr>
 	</table>
 </center>
 
 </body>
 </html>
 
-<div style="position:absolute;bottom: 0;width: 100%;text-align: center;line-height: 40px;font-size: 25px;">
-	<a href="#" target="_blank" style="color: #404577;text-decoration: none;">Template Email</a>
-</div>
-
-
-
-
-
-<!-- Begin Social Share **you can remove this to center the template :) -->
-<style>
-	.btn:hover {
-		color: white;
-		opacity: .8;
-		transform: scale(1.02);
-	}
-</style>
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-sm btn-danger" style="position: absolute; right: 7px; bottom: 7px;transition: transform .3s ease;" data-toggle="modal" data-target="#socialModal">
-  Subscribe!
-</button>
 <!-- Modal -->
 <div class="modal fade" id="socialModal" style="font-family: 'Poppins', sans-serif;">
   <div class="modal-dialog modal-md" role="document">
@@ -232,9 +234,6 @@
 							<!-- YOUTUBE CHANNEL -->
 							<a class="btn btn-lg" href="https://www.youtube.com/channel/UCZWoe3ezD_dZTZgQnDyBgFQ/?sub_confirmation=1" target="_blank" style="background-color: red;color: white;transition: transform .3s ease;"><i class="fab fa-youtube"></i> Subscribe
 							</a>
-						</div>
-						<div class="col-12">
-							<h6 class="pt-4 pb-0"><a href="https://responsivehtmlemail.com/html-email-course/" target="_blank">www.responsivehtmlemail.com</a></h6>
 						</div>
 					</div>
 				</div>
