--- a/index.html
+++ b/index.html
@@ -5,7 +5,115 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>HTML Email Template</title>
-<link rel="stylesheet" href="/style.css" />
+<style type="text/css">
+body {
+    margin: 0;
+    background-color: #cccccc;
+}
+table {
+    border-spacing: 0;
+}
+td {
+    padding: 0;
+}
+img {
+    border: 0;
+}
+
+.wrapper{
+    width: 100%;
+    table-layout: fixed;
+    background-color: #cccccc;
+    padding-bottom: 60px;
+}
+
+.main {
+    background-color: #fff;
+    margin: 0 auto;
+    width: 100%;
+    max-width: 600px;
+    border-spacing: 0;
+    font-family: sans-serif;
+    color: #171a1b;
+}
+
+.two-columns {
+    text-align: center;
+    font-size: 0;
+}
+.two-columns .column {
+    width: 100%;
+    max-width: 300px;
+    display: inline-block;
+    vertical-align: top;
+    text-align: center;
+}
+.three-columns {
+    text-align: center;
+    font-size: 0px;
+    padding: 15px 0 25px;
+}
+.three-columns .column {
+    width: 100%;
+    max-width: 200px;
+    display: inline-block;
+    vertical-align: top;
+    text-align: center;
+}
+
+.three-columns .padding {
+    padding: 15px;
+}
+
+.three-columns .content {
+    font-size: 15px;
+    line-height: 20px;
+    padding: 0 5px;
+}
+
+.two-columns.last {
+    padding: 15px 0;
+}
+
+.two-columns .padding {
+    padding: 20px;
+}
+
+.two-columns .content {
+    font-size: 15px;
+    line-height: 20px;
+    text-align: left;
+}
+
+.button{
+    background-color: #fff;
+    color: #171a1b;
+    text-decoration: none;
+    padding: 12px 20px;
+    border-radius: 5px;
+    font-weight: bold;
+}
+
+.button-dark {
+    background-color: #171a1b;
+    color: #fff;
+    text-decoration: none;
+    padding: 12px 20px;
+    border-radius: 5px;
+    font-weight: bold;
+}
+
+.btn:hover {
+    color: white;
+    opacity: .8;
+    transform: scale(1.02);
+}
+
+.responsive {
+    width: 100%;
+    height: auto;
+  }
+</style>
 </head>
 <body>
 <center class="wrapper">
@@ -232,7 +340,7 @@
 						</div>
 						<div class="col-lg-5 my-2">
 							<!-- YOUTUBE CHANNEL -->
-							<a class="btn btn-lg" href="https://www.youtube.com/channel/UCZWoe3ezD_dZTZgQnDyBgFQ/?sub_confirmation=1" target="_blank" style="background-color: red;color: white;transition: transform .3s ease;"><i class="fab fa-youtube"></i> Subscribe
+							<a class="btn btn-lg" href="https://www.youtube.com/@TraversyMedia?sub_confirmation=1" target="_blank" style="background-color: red;color: white;transition: transform .3s ease;"><i class="fab fa-youtube"></i> Subscribe
 							</a>
 						</div>
 					</div>
